--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Interns Hub Website</title>
 </head>
 <body>
-    <h1>Welcome page for Interns</h1>
+    <h1>Welcome to Interns Hub</h1>
     <video width="320" height="240" controls>
         <source src="videos/earth.mp4" type="video/mp4">
         Your browser does not support the video tag.
